2009-02-04  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/common/bundleclient.py:
	Revert r7753 and add a FIXME comment to remember that we cannot be 
	completelly sure the bundle has the correct content only by checking
	that the directory exists.

2009-02-03  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/scenario/Makefile.am:
	* flumotion/scenario/live/live.xml:
	* flumotion/scenario/ondemand/ondemand.xml:
	* flumotion/scenario/steps/steps.xml:
	* flumotion/scenario/scenario.xml (added):
	Bundle the flumotion/scenario/__init__.py file. Otherwise the modules
	under that module were load from the local installation and not from
	the bundles.

2009-02-03  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/common/bundleclient.py:
	Don't fetch a bundle when it is already up-to-date!!

2009-01-30  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/misc/httpserver/httpfile.py:
	Ugly hack: do not send Accept-Ranges header if filename
	ends in .pdf.

2009-01-29  Jan Urbanski  <jurbanski@flumotion.com>

	* doc/redhat/flumotion:
	Change the 'status' service command to print useful output to stdout
	and possible errors to the logfile, instead of printing everything to
	stdout.

2009-01-29  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Julien Le Goff <jlegoff@flumotion.com>

	* data/glade/Makefile.am:
	* data/glade/http-wizard.glade (deleted):
	* data/glade/httpstreamer-wizard.glade:
	The HTTPCommon step has been merged with the HTTPStreamer one.
	Now the	specific details of the streamer will be shown on the first
	step and hidden for the following ones unless the worker is changed
	or the user requests it.
	Fixes #1232
	* flumotion/admin/assistant/save.py:
	Updated the method for fetching the trailing digits using regexp
	instead of a loop. Thanks Julien.
	* flumotion/test/test_wizard_save.py:
	Fixed the tests of the HTTPStreamer step according to the changes made.